--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.coderodde.encoding</groupId>
-    <artifactId>HuffmanCompressorApp</artifactId>
+    <artifactId>HuffmanCompressorApp.java</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
     <properties>
@@ -10,7 +10,7 @@
         <maven.compiler.release>24</maven.compiler.release>
         <exec.mainClass>io.github.coderodde.encoding.App</exec.mainClass>
     </properties>
-    <name>HuffmanCompressorApp</name>
+    <name>HuffmanCompressorApp.java</name>
     <build>
         <plugins>
             <plugin>
